# email_worker

./: .dockerignore  .gitignore  Dockerfile  README.md  celery_client.py  deploy_email_worker.ps1  deploy_email_worker.sh  docker-compose.yml  email_tasks.py  pyproject.toml
docs/: dockerisation.md  email_tasks.md
worker/: __init__.py  email_tasks.py
