[project]
name = "email_worker"
version = "0.1.0"
description = "PyTune email worker"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]>=0.34",
    "python-dotenv",
    "pydantic",
    "requests",
    "python-multipart",
    "toml",
]

# Dépendances internes via workspace
pytune_auth_common = { workspace = true }
pytune_configuration = { workspace = true }
simple_logger = { workspace = true }
pytune_data = { workspace = true }
pytune_helpers_messaging = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Désactive complètement le packaging (service != package)
[tool.hatch.build.targets.wheel]
packages = []
exclude = ["**"]